--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@ body {
     color:#fff;
     text-transform: uppercase;
 
+    backface-visibility: hidden;
+
 }
 
 .heading-primary-main {
@@ -64,10 +66,51 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+
+    animation-name: moveInLeft;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    
 }
 .heading-primary-sub {
     display:block;
     font-size: 20px;
     font-weight: 800;
     letter-spacing: 19.5px;
+
+    animation-name: moveInRight;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes moveInLeft {
+    0% {
+
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    80% {
+        transform: translateX(20px);
+
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    80% {
+        transform: translateX(-20px);
+
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
