--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
     background-image: linear-gradient(
         to right bottom,
         rgba(126, 213, 111, 0.801),
-        rgba(40, 180, 133, 0.719)), 
+        rgba(46, 201, 149, 0.801)), 
     url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
@@ -51,6 +51,7 @@ body {
     top:40%;
     left:50%;
     transform:translate(-50%, -50%) ;
+    text-align: center;
 }
 
 .heading-primary {
@@ -58,6 +59,7 @@ body {
     text-transform: uppercase;
 
     backface-visibility: hidden;
+    margin-bottom: 60px;
 
 }
 
@@ -113,4 +115,72 @@ body {
         opacity: 1;
         transform: translateX(0);
     }
+}
+
+@keyframes moveInBottom {
+    0% {
+
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 500px;
+    transition: all .2s;
+    position: relative;
+
+    animation-name: moveInBottom;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    
+}
+.btn:hover {
+    transform:translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2)
+}
+.btn-white {
+    background-color:#fff;
+    color:#777;
+}
+
+.btn::after {
+    content: "";
+    display:inline-block;
+    height:100%;
+    width:100%;
+    border-radius:100px;
+    position: absolute;
+    top:0;
+    left:0;
+    z-index:-1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color:#fff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity:0;
+}
+
+.btn-animated {
+    animation: moveInBottom .5s ease-out .75s;
+    animation-fill-mode: backwards;
 }
